--- a/src/components/SrChrystian/teste.css
+++ b/src/components/SrChrystian/teste.css
@@ -1,3 +1,12 @@
-h1{
+h1#texto{
     color: aquamarine;
+    text-align: center;
+   
+}
+div#ola{
+    background-image: linear-gradient(to top,green, red);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
 }
